# desktop-tools

./: .gitignore  README.md  pyproject.toml
desktop_tools/: __init__.py  __main__.py  _timeout.py  annotator.py  executor.py  mcp_server.py  preset_loader.py  screenshot.py  windows_api.py
reasonix_desktop_tools/: __init__.py  __main__.py  _timeout.py  executor.py  mcp_server.py  screenshot.py  windows_api.py
tests/: smoke_test.py  test_snapshot.py
