[project]
name = "desktop-tools"
version = "0.40"
description = "MCP Server for desktop control — works with Claude Codex, Cline, Cursor, and any MCP-compatible Agent"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }

dependencies = [
    "mcp>=1.0.0",
    "dxcam>=0.3.0",
    "Pillow>=10.0.0",
    "comtypes>=1.4.0",
]

[project.urls]
homepage = "https://github.com/Luohuayi-1/desktop-tools"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["desktop_tools*"]
